# my-video-app

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
lib/: glfw.cmake  spdlog.cmake
src/: Log.cpp  Log.h  main.cpp  pre_hdr.h
